<resources>
    <string name="app_name">Lab4Ex2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Chapter</string>
    <string name="second_fragment_label">Second Chapter</string>
    <string name="third_fragment_label">Third Chapter</string>
    <string name="fourth_fragment_label">Fourth Chapter</string>
    <string name="start_fragment_label">Capra cu 3 iezi</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="chapter1">Era odată o capră care avea trei iezi. Iedul cel mare și cu cel mijlociu dau prin băț de obraznici ce erau; iară cel mic era harnic și cuminte. Vorba ceea : "Sunt cinci degete la o mână și nu samănă toate unul cu altul".

Într-o zi, capra cheamă iezii de pe-afară și le zice :

– Dragii mamei copilași ! Eu mă duc în pădure ca să mai duc ceva de-a mâncării. Dar voi, încuieți ușa după mine, ascultați unul de altul, și să nu cumva să deschideți până ce nu-ți auzi glasul meu. Când voiu veni eu, am să vă dau de știre, ca să mă cunoașteți, și am să vă spun așa :

Trei iezi cucuieți
Ușa mamei descuieți !
Că mama v-aduce vouă :
Frunze-n buze,
Lapte-n țâțe,
Drob de sare
În spinare,
Mălăieș
În călcăieș
Smoc de flori
Pe subsuori.
Auzit-ați ce-am spus eu ?

– Da, mămucă, ziseră iezii.

– Pot să am nădejde în voi ?

– Să n-ai nici o grijă, mămucă, apucară cu gura înainte cei mai mari. Noi suntem odată băieți, și ce-am vorbit odată vorbit rămâne.

– Dacă-i așa, apoi veniți să vă sărute mama ! Dumnezeu să vă apere de cele rele, și mai rămâneți cu bine!

– Mergi sănătoasă, mămucă, zise cel mic, cu lacrimi în ochi, și Dumnezeu să-ți ajute ca să te întoarne cu bine și să ne-aduci demâncare.

    </string>

    <string name="chapter2">După ce capra se duce în treaba ei, iezii închid ușa și trag zăvorul, conștienți că păreții au urechi și ferestrele ochi. Între timp, dușmanul lor, un lup, chiar cumătrul caprei, pândea mereu ocazia să-i mănânce. Auzindu-i pe iezii discutând cu mama lor, lupul simte că e momentul să acționeze.

El recită formula obișnuită cu care capra îi anunța pe iezii să descuie ușa. Cu toate acestea, iezii sunt precauți. Cel mic își amintește că glasul mamei lor nu este atât de gros și răgușit precum cel al lupului. Astfel, lupul decide să-și pregătească planul.

El se duce la un fierar să-și ascute limba și dinții, pentru a-și subția glasul, astfel încât să pară mai mult a mama caprei. Revenind, lupul repetă formula. Însă cel mic este încă suspicios și avertizează ceilalți doi să nu deschidă ușa, pentru că nu sună ca vocea mamei lor.

În cele din urmă, cel mare se lasă convins și deschide ușa, crezând că e mama lor. Dar când lupul intră, dezvăluie adevărata sa identitate și îi atacă pe iezii nevinovați. Acest episod arată cât de abil poate fi lupul în manipularea situației pentru a-și atinge scopul malefic.
    </string>

    <string name="chapter3">După ce lupul nu găsește nimic în casă, își pune în gând să își pună cele două capete rânjind în ferestre și să ungă pereții cu sânge pentru a face și mai multă panică. După ce iese, iedul cel mic coboară din horn și închide bine ușa. Apoi începe să plângă pentru frații săi.

Capra sosește acasă și vede cele două capete zâmbitoare în ferestre, crezând că iezii îl așteaptă cu bucurie. Dar când se apropie, descoperă adevărul și îi găsește pe iezii săi dispăruți. Cel mic îi explică situația și capra, șocată, începe să-și dea seama de gravitatea evenimentelor.

Încă îngrozită, capra întreabă ce s-a întâmplat, iar iedul cel mic îi povestește că lupul a venit și i-a amenințat. Capra este furioasă și hotărâtă să îl înfrunte pe cumătrul său lup. Ea promite că va lua măsuri împotriva lui și îl va face să plătească pentru faptele sale rele. Iedul cel mic încearcă să o calmeze și să o încurajeze să nu se arate în fața lupului, pentru a nu fi rănită.

Capra este determinată să se răzbune și să-și protejeze copiii. Ea recunoaște că lupul trebuie să plătească pentru ceea ce a făcut, deoarece a adus nenorocire asupra casei lor. În final, capra și iezii săi hotărăsc să fie vigilenți și să nu se lase păcăliți de lup în viitor.</string>
    <string name="chapter4">Și de-atunci căuta și ea vreme cu prilej ca să facă pe obraz cumătru-său. Se pune ea și stă în cumpene, cum să dreagă și ce să-i facă ?

"Aha ! ia, acum i-am găsit leacul, zise ea în gândul său. Taci ! că i-oiu face eu cumătrului una de ș-a mușca labele !"

Aproape de casa ei era o groapă adâncă; acolo-i nădejdea caprei.

– La cadă cu dubală, cumătre lup, că nu-i de chip !... Ia, de-acu să-ncepe fapta : Hai la treabă, cumătriță, că lupul ți-a dat de lucru !"

Și așa zicând, pune poalele-n brâu, își suflecă mânicele, ațâță focul și s-apucă de făcut bucate. Face ea sarmale, face plachie, face alivenci, face pască cu smântână și cu ouă și fel de fel de bucate. Apoi umple groapa cu jăratic și cu lemne putregăioase ca să ardă focul mocnit. După asta așază o leașă de nuiele numai întinată și niște frunzări peste dânsa : peste frunzări toarnă țărână și peste țărână așterne o rogojină. Apoi face un scăuieș de ceară anume pentru lup. Pe urmă lasă bucatele la foc să fearbă și se duce prin pădure să caute pe cumătru-său și să-l poftească la praznic. Merge ea cât merge prin codru, până ce dă pe-o prăpastie grozavă și întunecoasă și pe-o tihăraie dă peste lup.

– Bună vreme, cumătro ! Da' ce vânt te-a abătut pe-aici ?

– Bună să-ți fie inima, cumătre, cum ți-i căutătura... apoi da, nu știi dumneata că nevoia te duce pe unde nu ți-i voia ? Ia, nu știu cine-a fost pe la mine pe-acasă în lipsa mea, că știu că mi-a făcut-o bună !

– Ca ce fel, cumătriță dragă ?

– Ia, a găsit iezii singurei, i-a ucis și i-a crâmpoțit, de le-am plâns de milă ! Numai văduvă să nu mai fie cineva !

– Da' nu mai spune, cumătră !

– Apoi de-acum, ori să spun, ori să nu mai spun, că totuna mi-e. Ei, mititeii, s-au dus cătră Domnul, și datoria ne face să le căutam de suflet. De aceea am făcut și eu un praznic, după puterea mea, și am găsit de cuviință să te poftesc și pe d-ta, cumătre; ca să mă mai mângâi...

– Bucuros, dragă cumătră, dar mai bucuros eram când m-ai fi chemat la nuntă.

– Te cred, cumătre, d-apoi, da, nu-i cum vrem noi, ci-i cum vre Cel-de-sus.

Apoi capra pornește înainte plângând, și lupul după dânsa, prefăcându-se că plânge.

– Doamne, cumătre, Doamne ! zise capra suspinând. De ce ți-e mai drag în lume, de-aceea n-ai parte...

– Apoi da, cumătră, când ar ști omul ce-ar păți, dinainte s-ar păzi. Nu-ți mai face și dumneata atâta inimă rea, că odată avem să mergem cu toții acolo.

– Așa este, cumătre, nu-i vorba. Dar sărmanii găgălici, de cruzi s-au mai dus !

– Apoi da, cumătră; se vede că și lui Dumnezeu îi plac tot puișori de cei mai tineri.

– Apoi, dacă i-ar fi luat Dumnezeu, ce ți-ar fi ? D-apoi așa ?

– Doamne, cumătră, Doamne ! Oiu face și eu ca prostul... Oare nu cumva nenea Martin a dat pe la dumneata pe acasă ? Că mi-aduc aminte ca acu că l-am întâlnit odată prin zmeuriș; și mi-a spus că dacă-i vrea dumneata să-i dai un băiet, să-l învețe cojocăria.

Și din vorbă-n vorbă, din una-n alta, ajung pân-acasă la cumătră !

– Ia poftim, cumătre, zise ea luând scăuieșul și punându-l deasupra groapei cu pricina, șezi cole și să ospătezi oleacă din ceea ce ne-a dat Dumnezeu !

Răstoarnă apoi sarmalele în strachină și i le pune dinainte.

Atunci lupul nostru începe a mânca hâlpav; și gogâlț, gogâlț, gogâlț, îi mergeau sarmalele întregi pe gât.

– Dumnezeu să ierte pe cei răposați, cumătră, că bune sarmale ai mai făcut !

– Și cum ospăta el, buf ! cade fără sine în groapa cu jăratic, căci scăuieșul de ceară s-a topit, și leașa de pe groapă nu era bine sprijinită : nici mai bine, nici mai rău, ca pentru cumătru.

– Ei, ei ! Acum scoate, lupe, ce-ai mâncat ! Cu capra ți-ai pus în cârd ? Capra ți-a venit de hac !

– Văleu, cumătră, tălpele mele ! Mă rog, scoate-mă că-mi arde inima-n mine !

– Ba nu, cumătre; c-așa mi-a ars și mie inima după iezișorii mei ! Lui Dumnezeu îi plac pui de cei mai tineri; mie însă-mi plac și de iști mai bătrâni, numai să fie bine fripți; știi, cole, să treacă focul printr-înșii.

– Cumătră, mă pârlesc, ard de tot, mor, nu mă lăsa !

– Arzi, cumătre, mori, că nici viu nu ești bun ! De-abie i-a mai trece băietului istuia de spărieț, că mult păr îmi trebuia de la tine ca să-l afum. Ți-aduci aminte, dihanie răutăcioasă și spurcată, când mi te-ai jurat pe părul tău ? și bine mi-ai mâncat iezișorii !

– Mă ustură inima-n mine, cumătră ! mă rog, scoate-mă, și nu-ți mai face atâta osândă cu mine !

– Moarte pentru moarte, cumătre, arsură pentru arsură, că bine-o mai plesniși dînioare cu cuvinte din scriptură !

După aceasta, capra și cu iedul au luat o căpiță de fân ș-au aruncat-o peste dânsul, în groapă, ca să se mai potolească focul. Apoi, la urma urmelor, năpădiră asupra lui și-i mai trântiră în cap cu bolovani și cu ce-au apucat, până-l omorâră de tot. Și așa s-a păgubit sărmana capră și de cei doi iezi, da' și de cumătru-său lupul păgubașă a rămas, și păgubașă să fie.

Și auzind caprele din vecinătate de una ca aceasta, tare le-au mai părut bine ! Și s-au adunat cu toatele la priveghiu și unde nu s-au așternut pe mâncate și pe băute, veselindu-se împreună...

Și eram și eu acolo de față, și-ndată după aceea am încălecat iute pe-o șea, ș-am venit de v-am spus povestea așa, ș-am mai încălecat pe-o roată și v-am spus jitia toată; și unde n-am mai încălecat pe-o capșună și v-am spus, oameni buni, o mare și gogonată minciună !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>