<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.lab4ex2.MainActivity">
    <item
        android:id="@+id/action_start_page"
        android:orderInCategory="100"
        android:title="Start"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_chapter1"
        android:orderInCategory="100"
        android:title="@string/first_fragment_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_chapter2"
        android:orderInCategory="100"
        android:title="@string/second_fragment_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_chapter3"
        android:orderInCategory="100"
        android:title="@string/third_fragment_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_chapter4"
        android:orderInCategory="100"
        android:title="@string/fourth_fragment_label"
        app:showAsAction="never" />


</menu>