<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startPage">

    <fragment
        android:id="@+id/FirstChapter"
        android:name="com.example.lab4ex2.FirstChapter"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondChapter" />
        <action
            android:id="@+id/action_FirstFragment_to_startPage"
            app:destination="@id/startPage" />
    </fragment>
    <fragment
        android:id="@+id/SecondChapter"
        android:name="com.example.lab4ex2.SecondChapter"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstChapter" />
        <action
            android:id="@+id/action_SecondFragment_to_thirdChapter"
            app:destination="@id/thirdChapter" />
    </fragment>
    <fragment
        android:id="@+id/thirdChapter"
        android:name="com.example.lab4ex2.ThirdChapter"
        android:label="@string/third_fragment_label" >
        <action
            android:id="@+id/action_thirdChapter_to_SecondFragment"
            app:destination="@id/SecondChapter" />
        <action
            android:id="@+id/action_thirdChapter_to_fourthChapter"
            app:destination="@id/fourthChapter" />
    </fragment>
    <fragment
        android:id="@+id/fourthChapter"
        android:name="com.example.lab4ex2.FourthChapter"
        android:label="@string/fourth_fragment_label" >
        <action
            android:id="@+id/action_fourthChapter_to_thirdChapter"
            app:destination="@id/thirdChapter" />
    </fragment>
    <fragment
        android:id="@+id/startPage"
        android:name="com.example.lab4ex2.StartPage"
        android:label="@string/start_fragment_label"
        tools:layout="@layout/fragment_start_page" >
        <action
            android:id="@+id/action_startPage_to_FirstFragment"
            app:destination="@id/FirstChapter" />
    </fragment>
</navigation>